test/snapshots/snapshots__sqlite_vec.snap
---
source: test/fixtures.rs
expression: output
---
README.md
     1→# `sqlite-vec`
    43→## Installing
    61→## Sample usage
    97→## Sponsors
   152→## See Also

ARCHITECTURE.md
     1→# `sqlite-vec` Architecture
     3→Internal documentation for how `sqlite-vec` works under-the-hood. Not meant for
     4→users of the `sqlite-vec` project, consult
     5→[the official `sqlite-vec` documentation](https://alexgarcia.xyz/sqlite-vec) for
     6→how-to-guides. Rather, this is for people interested in how `sqlite-vec` works
     7→and some guidelines to any future contributors.
     8→
     9→Very much a WIP.
    10→
    11→## `vec0`
    13→### Shadow Tables
    49→### idxStr

bindings/python/extra_init.py
     6→def serialize_float32(vector: List[float]) -> bytes:
     7→    """Serializes a list of floats into the "raw bytes" format sqlite-vec expects"""
    11→def serialize_int8(vector: List[int]) -> bytes:
    12→    """Serializes a list of integers into the "raw bytes" format sqlite-vec expects"""
    19→    def register_numpy(db: Connection, name: str, array: npt.NDArray):
    20→        """ayoo"""
    44→    def register_numpy(db: Connection, name: str, array):

bindings/rust/src/lib.rs
     3→    pub fn sqlite3_vec_init();

Makefile

reference.yaml
     1→sections:
    31→meta:
    40→constructors:
    83→op:
   258→distance:
   308→quantization:
   328→vec0:

sqlite-vec.c
     1→#include "sqlite-vec.h"
    19→#include "sqlite3ext.h"
    22→#include "sqlite3.h"
    87→#define UNUSED_PARAMETER …
    93→#define COMPILER_SUPPORTS_VTAB_IN …
    97→#define SQLITE_SUBTYPE …
   101→#define SQLITE_RESULT_SUBTYPE …
   105→#define SQLITE_INDEX_CONSTRAINT_LIMIT …
   109→#define SQLITE_INDEX_CONSTRAINT_OFFSET …
   112→#define countof …
   113→#define min …
   115→enum VectorElementType …
   125→#define PORTABLE_ALIGN32 …
   126→#define PORTABLE_ALIGN64 …
   169→static f32 l2_sqr_float_neon(const void *pVect1v, const void *pVect2v,
   170→                             const void *qty_ptr) {
   527→static unsigned int __builtin_popcountl(unsigned int x) {
   536→#define __builtin_popcountl …
   556→static f32 distance_hamming(const void *a, const void *b, const void *d) {
   583→#define vecJsonIsspace …
   585→typedef void (*vector_cleanup)(void *p …
   587→void vector_cleanup_noop …
   589→#define JSON_SUBTYPE …
   591→void vtab_set_error …
   598→struct Array …
   646→void array_cleanup …
   656→char *vector_subtype_name …
   667→char *type_name …
   683→typedef void (*fvec_cleanup)(f32 *vector …
   685→void fvec_cleanup_noop …
   998→int ensure_vector_match …
  1050→struct VecNpyFile …
  1054→#define SQLITE_VEC_NPY_FILE_NAME …
  1317→char *vec_type_name …
  1798→enum Vec0TokenType …
  1806→struct Vec0Token …
  1812→int is_alpha …
  1815→int is_digit …
  1816→int is_whitespace …
  1820→#define VEC0_TOKEN_RESULT_EOF …
  1821→#define VEC0_TOKEN_RESULT_SOME …
  1822→#define VEC0_TOKEN_RESULT_ERROR …
  1824→int vec0_token_next …
  1880→struct Vec0Scanner …
  1892→int vec0_scanner_next …
  1900→int vec0_parse_table_option …
  1945→ * @brief Parse an argv[i] entry of a vec0 virtual table definition, and see if
      →…
  1956→int vec0_parse_partition_key_definition(const char *source, int source_length,
  1957→                                 char **out_column_name,
  1958→                                 int *out_column_name_length,
  1959→                                 int *out_column_type) {
  2022→ * @brief Parse an argv[i] entry of a vec0 virtual table definition, and see if
      →…
  2033→int vec0_parse_auxiliary_column_definition(const char *source, int source_length,
  2034→                                 char **out_column_name,
  2035→                                 int *out_column_name_length,
  2036→                                 int *out_column_type) {
  2091→typedef enum { …
  2100→ * @brief Parse an argv[i] entry of a vec0 virtual table definition, and see if
      →…
  2111→int vec0_parse_metadata_column_definition(const char *source, int source_length,
  2112→                                 char **out_column_name,
  2113→                                 int *out_column_name_length,
  2114→                                 vec0_metadata_column_kind *out_column_type) {
  2160→ * @brief Parse an argv[i] entry of a vec0 virtual table definition, and see if
      →…
  2171→int vec0_parse_primary_key_definition(const char *source, int source_length,
  2172→                                 char **out_column_name,
  2173→                                 int *out_column_name_length,
  2174→                                 int *out_column_type) {
  2236→enum Vec0DistanceMetrics …
  2242→struct VectorColumnDefinition …
  2250→struct Vec0PartitionColumnDefinition …
  2256→struct Vec0AuxiliaryColumnDefinition …
  2261→struct Vec0MetadataColumnDefinition …
  2267→size_t vector_byte_size …
  2285→ * @brief Parse an vec0 vtab argv[i] column definition and see if
      →…
  2294→int vec0_parse_vector_column(const char *source, int source_length,
  2295→                        struct VectorColumnDefinition *outColumn) {
  2429→typedef struct vec_each_vtab vec_each_vtab …
  2430→struct vec_each_vtab …
  2434→typedef struct vec_each_cursor vec_each_cursor …
  2435→struct vec_each_cursor …
  2622→enum NpyTokenType …
  2635→struct NpyToken …
  2641→int npy_token_next …
  2718→struct NpyScanner …
  2731→int npy_scanner_next …
  2739→#define NPY_PARSE_ERROR …
  2740→int parse_npy_header …
  2876→typedef struct vec_npy_each_vtab vec_npy_each_vtab …
  2877→struct vec_npy_each_vtab …
  2881→typedef enum { …
  2886→typedef struct vec_npy_each_cursor vec_npy_each_cursor …
  2887→struct vec_npy_each_cursor …
  3026→int parse_npy_buffer …
  3375→#define VEC0_COLUMN_ID …
  3376→#define VEC0_COLUMN_USERN_START …
  3377→#define VEC0_COLUMN_OFFSET_DISTANCE …
  3378→#define VEC0_COLUMN_OFFSET_K …
  3380→#define VEC0_SHADOW_INFO_NAME …
  3382→#define VEC0_SHADOW_CHUNKS_NAME …
  3383→/// 1) schema, 2) original vtab table name
  3384→#define VEC0_SHADOW_CHUNKS_CREATE …
  3392→#define VEC0_SHADOW_ROWIDS_NAME …
  3393→/// 1) schema, 2) original vtab table name
  3394→#define VEC0_SHADOW_ROWIDS_CREATE_BASIC …
  3402→// vec0 tables with a text primary keys are still backed by int64 primary keys,
  3403→// since a fixed-length rowid is required for vec0 chunks. But we add a new 'id
  3404→// text unique' column to emulate a text primary key interface.
  3405→#define VEC0_SHADOW_ROWIDS_CREATE_PK_TEXT …
  3413→/// 1) schema, 2) original vtab table name
  3414→#define VEC0_SHADOW_VECTOR_N_NAME …
  3416→/// 1) schema, 2) original vtab table name
  3417→#define VEC0_SHADOW_VECTOR_N_CREATE …
  3423→#define VEC0_SHADOW_AUXILIARY_NAME …
  3425→#define VEC0_SHADOW_METADATA_N_NAME …
  3426→#define VEC0_SHADOW_METADATA_TEXT_DATA_NAME …
  3428→#define VEC_INTERAL_ERROR …
  3429→#define REPORT_URL …
  3431→typedef struct vec0_vtab vec0_vtab …
  3433→#define VEC0_MAX_VECTOR_COLUMNS …
  3434→#define VEC0_MAX_PARTITION_COLUMNS …
  3435→#define VEC0_MAX_AUXILIARY_COLUMNS …
  3436→#define VEC0_MAX_METADATA_COLUMNS …
  3438→#define SQLITE_VEC_VEC0_MAX_DIMENSIONS …
  3439→#define VEC0_METADATA_TEXT_VIEW_BUFFER_LENGTH …
  3440→#define VEC0_METADATA_TEXT_VIEW_DATA_LENGTH …
  3442→typedef enum { …
  3456→struct vec0_vtab …
  4267→int vec0_rowids_insert_id …
  4334→int vec0_metadata_chunk_size …
  4397→ * @brief Adds a new chunk for the vec0 table, and the corresponding vector
      →…
  4409→int vec0_new_chunk(vec0_vtab *p, sqlite3_value ** partitionKeyValues, i64 *chunk_rowid) {
  4549→struct vec0_query_fullscan_data …
  4553→void vec0_query_fullscan_data_clear …
  4564→struct vec0_query_knn_data …
  4573→void vec0_query_knn_data_clear …
  4587→struct vec0_query_point_data …
  4592→void vec0_query_point_data_clear …
  4601→typedef enum { …
  4609→typedef struct vec0_cursor vec0_cursor …
  4610→struct vec0_cursor …
  4619→void vec0_cursor_clear …
  4637→#define VEC_CONSTRUCTOR_ERROR …
  5303→// All the different type of "values" provided to argv/argc in vec0Filter.
  5304→// These enums denote the use and purpose of all of them.
  5305→typedef enum  { …
  5326→// The different SQLITE_INDEX_CONSTRAINT values that vec0 partition key columns
  5327→// support, but as characters that fit nicely in idxstr.
  5328→typedef enum  { …
  5349→typedef enum  { …
  5360→typedef enum { …
  5769→static int vec0Next(sqlite3_vtab_cursor *cur);
  5771→void merge_sorted_lists …
  5814→u8 *bitmap_new_from …
  5852→void bitmap_fill …
  5858→ * @brief Finds the minimum k items in distances, and writes the indicies to
      →…
  5867→int min_idx(const f32 *distances, i32 n, u8 *candidates, i32 *out, i32 k,
  5868→            u8 *bTaken, i32 *k_used) {
  5935→ * @brief Crete at "iterator" (sqlite3_stmt) of chunks with the given constraints
      →…
  5948→int vec0_chunks_iter(vec0_vtab * p, const char * idxStr, int argc, sqlite3_value ** argv, sqlite3_stmt** outStmt) {
  6032→// a single `xxx in (...)` constraint on a metadata column. TEXT or INTEGER only for now.
  6033→struct Vec0MetadataIn …
  6034→  // index of argv[i]` the constraint is on
  6035→  int argv_idx;
  6036→  // metadata column index of the constraint, derived from idxStr + argv_idx
  6037→  int metadata_idx;
  6038→  // array of the copied `(...)` values from sqlite3_vtab_in_first()/sqlite3_vtab_in_next()
  6039→  struct Array array;
  6040→};
  6042→// Array elements for `xxx in (...)` values for a text column. basically just a string
  6043→struct Vec0MetadataInTextEntry …
  6044→  int n;
  6045→  char * zString;
  6046→};
  6534→int vec0Filter_knn_chunks_iter …
  6939→int vec0Filter_knn …
  7223→int vec0Filter_fullscan …
  7269→int vec0Filter_point …
  7759→ * @brief Determines the "next available" chunk position for a newly inserted
      →…
  7778→int vec0Update_InsertNextAvailableStep(
  7779→    vec0_vtab *p,
  7780→    sqlite3_value ** partitionKeyValues,
  7781→    i64 *chunk_rowid, i64 *chunk_offset,
  7782→    sqlite3_blob **blobChunksValidity,
  7783→    const unsigned char **bufferChunksValidity) {
  7931→static int
  7932→vec0_write_vector_to_vector_blob(sqlite3_blob *blobVectors, i64 chunk_offset,
  7933→                                 const void *bVector, size_t dimensions,
  7934→                                 enum VectorElementType element_type) {
  8089→int vec0_write_metadata_value …
  8244→ * @brief Handles INSERT INTO operations on a vec0 table.
      →…
  8248→int vec0Update_Insert(sqlite3_vtab *pVTab, int argc, sqlite3_value **argv,
  8249→                      sqlite_int64 *pRowid) {
  8600→int vec0Update_Delete_ClearMetadata …
  8677→int vec0Update_Delete …
  8760→int vec0Update_UpdateVectorColumn …
  9085→struct static_blob_definition …
  9111→#define MAX_STATIC_BLOBS …
  9113→typedef struct static_blob static_blob …
  9114→struct static_blob …
  9122→typedef struct vec_static_blob_data vec_static_blob_data …
  9123→struct vec_static_blob_data …
  9127→typedef struct vec_static_blobs_vtab vec_static_blobs_vtab …
  9128→struct vec_static_blobs_vtab …
  9133→typedef struct vec_static_blobs_cursor vec_static_blobs_cursor …
  9134→struct vec_static_blobs_cursor …
  9330→typedef struct vec_static_blob_entries_vtab vec_static_blob_entries_vtab …
  9331→struct vec_static_blob_entries_vtab …
  9335→typedef enum { …
  9340→struct sbe_query_knn_data …
  9349→void sbe_query_knn_data_clear …
  9363→typedef struct vec_static_blob_entries_cursor vec_static_blob_entries_cursor …
  9364→struct vec_static_blob_entries_cursor …
  9734→#define SQLITE_VEC_DEBUG_BUILD_AVX …
  9739→#define SQLITE_VEC_DEBUG_BUILD_NEON …
  9742→#define SQLITE_VEC_DEBUG_BUILD …
  9745→#define SQLITE_VEC_DEBUG_STRING …
  9853→SQLITE_VEC_API int …

sqlite-vec.h.tmpl

test.sql

tmp-static.py
    25→def register_np …

bindings/rust/Cargo.toml.tmpl

bindings/rust/Makefile

bindings/rust/build.rs
     1→fn main() {

bindings/go/ncruces/go-sqlite3.patch

benchmarks/README.md

tests/sqlite-vec-internal.h
     3→int min_idx(

sqlite-dist.toml
     1→[package]
    10→[targets]

examples/nbc-headlines/README.md

examples/sqlite3-cli/README.md

examples/wasm/README.md

examples/simple-bun/demo.ts

examples/simple-deno/demo.ts

examples/simple-python/demo.py
     8→def serialize_f32(vector: List[float]) -> bytes:

examples/simple-sqlite/demo.sql

scripts/progress.ts

scripts/publish-release.sh

scripts/vendor.sh

examples/simple-node/demo.mjs

site/api-reference.md

site/build-ref.mjs

site/compiling.md

site/index.md

site/project.data.ts
    13→  load() {

site/sqlite.tmlanguage.json

site/versioning.md

bindings/

bindings/go/

examples/

examples/python-recipes/

examples/simple-c/

examples/simple-go-cgo/

examples/simple-go-ncruces/

examples/simple-node2/

examples/simple-ruby/

examples/simple-rust/

examples/simple-wasm/

site/features/

site/getting-started/

site/guides/

site/public/

site/public/fonts/

site/using/

tests/__snapshots__/

tests/afbd/

tests/correctness/

tests/fuzz/

tests/leak-fixtures/

tests/minimum/
