test/snapshots/snapshots__superstruct.snap
---
source: test/fixtures.rs
expression: output
---
Readme.md
    42→### Usage
   145→### Why?
   167→### Principles
   181→### Demo
   189→### Examples
   205→### Documentation

jsr.json
     2→  "$schema": "https://jsr.io/schema/config-file.v1.json",
     3→  "name": "@superstruct/core",
     4→  "version": "2.0.2",
     5→  "exports": "./src/index.ts",
     6→  "publish": {
     7→    "include": ["Readme.md", "License.md", "src", "docs"]
     8→  }

src/error.ts
     2→ * A `StructFailure` represents a single specific failure in validation.
     5→export type Failure …
    17→ * `StructError` objects are thrown (or returned) when validation fails.
      →…
    25→export class StructError …
    35→  constructor …

src/struct.ts
     1→import { toFailures, shiftIterator, StructSchema, run } from './utils.js'
     2→import { StructError, Failure } from './error.js'
     5→ * `Struct` objects encapsulate the validation logic for a specific type of
      →…
    10→export class Struct …
    22→  constructor …
    64→   * Assert that a value passes the struct's validation, throwing if it doesn't.
    67→  assert(value: unknown, message?: string): asserts value is T {
    72→   * Create a value with the struct's coercion logic, then validate it.
    75→  create(value: unknown, message?: string): T {
    80→   * Check if a value passes the struct's validation.
    83→  is(value: unknown): value is T {
    88→   * Mask a value, coercing and validating it, but returning only the subset of
      →…
    93→  mask(value: unknown, message?: string): T {
    98→   * Validate a value with the struct's validation logic, returning a tuple
      →…
   107→  validate(
   108→    value: unknown,
   109→    options: {
   110→      coerce?: boolean
   111→      mask?: boolean
   112→      message?: string
   113→    } = {}
   114→  ): [StructError, undefined] | [undefined, T] {
   120→ * Assert that a value passes a struct, throwing if it doesn't.
   123→export function assert<T, S>(
   124→  value: unknown,
   125→  struct: Struct<T, S>,
   126→  message?: string
   127→): asserts value is T {
   136→ * Create a value with the coercion logic of struct and validate it.
   139→export function create<T, S>(
   140→  value: unknown,
   141→  struct: Struct<T, S>,
   142→  message?: string
   143→): T {
   154→ * Mask a value, returning only the subset of properties defined by a struct.
   157→export function mask<T, S>(
   158→  value: unknown,
   159→  struct: Struct<T, S>,
   160→  message?: string
   161→): T {
   172→ * Check if a value passes a struct.
   175→export function is<T, S>(value: unknown, struct: Struct<T, S>): value is T {
   181→ * Validate a value against a struct, returning an error if invalid, or the
   182→ * value (with potential coercion) if valid.
   185→export function validate<T, S>(
   186→  value: unknown,
   187→  struct: Struct<T, S>,
   188→  options: {
   189→    coerce?: boolean
   190→    mask?: boolean
   191→    message?: string
   192→  } = {}
   193→): [StructError, undefined] | [undefined, T] {
   214→ * A `Context` contains information about the current location of the
   215→ * validation inside the initial input value. It also carries `mask`
   216→ * since it's a run-time flag determining how the validation was invoked
   217→ * (via `mask()` or via `validate()`), plus it applies recursively
   218→ * to all of the nested structs.
   221→export type Context …
   228→ * A type utility to extract the type from a `Struct` class.
   231→export type Infer …
   234→ * A type utility to describe that a struct represents a TypeScript type.
   237→export type Describe …
   240→ * A `Result` is returned from validation functions.
   243→export type Result …
   250→ * A `Coercer` takes an unknown value and optionally coerces it.
   253→export type Coercer …
   256→ * A `Validator` takes an unknown value and validates it.
   259→export type Validator …
   262→ * A `Refiner` takes a value of a known type and validates it against a further
   263→ * constraint.
   266→export type Refiner …

src/utils.ts
     1→import { Struct, Infer, Result, Context, Describe } from './struct.js'
     2→import { Failure } from './error.js'
     5→ * Check if a value is an iterator.
     8→function isIterable<T>(x: unknown): x is Iterable<T> {
    13→ * Check if a value is a plain object.
    16→export function isObject(x: unknown): x is object {
    21→ * Check if a value is a non-array object.
    24→export function isNonArrayObject(x: unknown): x is object {
    29→ * Check if a value is a plain object.
    32→export function isPlainObject(x: unknown): x is { [key: string]: any } {
    42→ * Return a value as a printable string.
    45→export function print(value: any): string {
    54→ * Shifts (removes and returns) the first value from the `input` iterator.
    55→ * Like `Array.prototype.shift()` but for an `Iterator`.
    58→export function shiftIterator<T>(input: Iterator<T>): T | undefined {
    64→ * Convert a single validation result to a failure.
    67→export function toFailure<T, S>(
    68→  result: string | boolean | Partial<Failure>,
    69→  context: Context,
    70→  struct: Struct<T, S>,
    71→  value: any
    72→): Failure | undefined {
   199→ * Convert a union of type to an intersection.
   202→export type UnionToIntersection …
   209→ * Assign properties from one type to another, overwriting existing.
   212→export type Assign …
   215→ * A schema for enum structs.
   218→export type EnumSchema …
   223→ * Check if a type is a match for another whilst treating overlapping
   224→ * unions as a match.
   227→export type IsMatch …
   230→ * Check if a type is an exact match.
   233→export type IsExactMatch …
   239→ * Check if a type is a record type.
   242→export type IsRecord …
   248→ * Check if a type is a tuple.
   251→export type IsTuple …
   264→ * Check if a type is a union.
   267→export type IsUnion …
   274→ * A schema for object structs.
   277→export type ObjectSchema …
   280→ * Infer a type from an object struct schema.
   283→export type ObjectType …
   288→ * Omit properties from a type that extend from a specific type.
   291→export type OmitBy …
   297→ * Normalize properties of a type that allow `undefined` to make them optional.
   300→export type Optionalize …
   304→ * Transform an object schema type to represent a partial.
   307→export type PartialObjectSchema …
   312→ * Pick properties from a type that extend from a specific type.
   315→export type PickBy …
   321→ * Simplifies a type definition to its most basic representation.
   324→export type Simplify …
   328→export type If<B extends Boolean, Then, Else> = B extends true ? Then : Else
   331→ * A schema for any type of struct.
   334→export type StructSchema …
   376→ * A schema for tuple structs.
   379→export type TupleSchema …
   382→ * Shorthand type for matching any `Struct`.
   385→export type AnyStruct …
   388→ * Infer a tuple of types from a tuple of `Struct`s.
   389→ *
   390→ * This is used to recursively retrieve the type from `union` `intersection` and
   391→ * `tuple` structs.
   394→export type InferStructTuple …
   402→type _InferTuple …

examples/README.md
     1→# Examples
     3→To run the examples locally, first run `npm install` in this directory. Then use node to run any of the examples like so: `node basic-validation.js`, `node composing-structs.js`, etc.

src/structs/coercions.ts
     1→import …
     2→import …
     3→import …
    16→export function coerce<T, S, C>(
    17→  struct: Struct<T, S>,
    18→  condition: Struct<C, any>,
    19→  coercer: Coercer<C>
    20→): Struct<T, S> {
    38→export function defaulted<T, S>(
    39→  struct: Struct<T, S>,
    40→  fallback: any,
    41→  options: {
    42→    strict?: boolean
    43→  } = {}
    44→): Struct<T, S> {
    79→export function trimmed<T, S>(struct: Struct<T, S>): Struct<T, S> {

src/structs/refinements.ts
     1→import …
     2→import …
     8→export function empty<
     9→  T extends string | any[] | Map<any, any> | Set<any>,
    10→  S extends any,
    11→>(struct: Struct<T, S>): Struct<T, S> {
    21→function getSize(value: string | any[] | Map<any, any> | Set<any>): number {
    33→export function max<T extends number | Date, S extends any>(
    34→  struct: Struct<T, S>,
    35→  threshold: T,
    36→  options: {
    37→    exclusive?: boolean
    38→  } = {}
    39→): Struct<T, S> {
    55→export function min<T extends number | Date, S extends any>(
    56→  struct: Struct<T, S>,
    57→  threshold: T,
    58→  options: {
    59→    exclusive?: boolean
    60→  } = {}
    61→): Struct<T, S> {
    77→export function nonempty<
    78→  T extends string | any[] | Map<any, any> | Set<any>,
    79→  S extends any,
    80→>(struct: Struct<T, S>): Struct<T, S> {
    93→export function pattern<T extends string, S extends any>(
    94→  struct: Struct<T, S>,
    95→  regexp: RegExp
    96→): Struct<T, S> {
   109→export function size<
   110→  T extends string | number | Date | any[] | Map<any, any> | Set<any>,
   111→  S extends any,
   112→>(struct: Struct<T, S>, min: number, max: number = min): Struct<T, S> {
   146→export function refine<T, S>(
   147→  struct: Struct<T, S>,
   148→  name: string,
   149→  refiner: Refiner<T>
   150→): Struct<T, S> {

src/structs/types.ts
     1→import …
     2→import …
     3→import …
    19→export function any(): Struct<any, null> {
    33→export function array<T extends Struct<any>>(Element?: T): any {
    60→export function bigint(): Struct<bigint, null> {
    70→export function boolean(): Struct<boolean, null> {
    83→export function date(): Struct<Date, null> {
   105→export function enums<U extends string | number, T extends readonly U[]>(
   106→  values: T
   107→): any {
   131→export function func(): Struct<Function, null> {
   144→export function instance<T extends { new (...args: any): any }>(
   145→  Class: T
   146→): Struct<InstanceType<T>, null> {
   159→export function integer(): Struct<number, null> {
   172→export function intersection<A extends AnyStruct, B extends AnyStruct[]>(
   173→  Structs: [A, ...B]
   174→): Struct<Infer<A> & UnionToIntersection<InferStructTuple<B>[number]>, null> {
   204→export function literal<T>(constant: T): any {
   230→export function map<K, V>(Key?: Struct<K>, Value?: Struct<V>): any {
   258→export function never(): Struct<never, null> {
   266→export function nullable<T, S>(struct: Struct<T, S>): Struct<T | null, S> {
   278→export function number(): Struct<number, null> {
   298→export function object<S extends ObjectSchema>(schema?: S): any {
   351→export function optional<T, S>(struct: Struct<T, S>): Struct<T | undefined, S> {
   367→export function record<K extends string, V>(
   368→  Key: Struct<K>,
   369→  Value: Struct<V>
   370→): Struct<Record<K, V>, null> {
   402→export function regexp(): Struct<RegExp, null> {
   415→export function set<T>(Element?: Struct<T>): any {
   442→export function string(): Struct<string, null> {
   456→export function tuple<A extends AnyStruct, B extends AnyStruct[]>(
   457→  Structs: [A, ...B]
   458→): Struct<[Infer<A>, ...InferStructTuple<B>], null> {
   492→export function type<S extends ObjectSchema>(
   493→  schema: S
   494→): Struct<ObjectType<S>, S> {
   522→export function union<A extends AnyStruct, B extends AnyStruct[]>(
   523→  Structs: [A, ...B]
   524→): Struct<Infer<A> | InferStructTuple<B>[number], null> {
   574→export function unknown(): Struct<unknown, null> {

src/structs/utilities.ts
     1→import …
     2→import …
     8→import …
    60→export function assign(...Structs: Struct<any>[]): any {
    71→export function define<T>(name: string, validator: Validator): Struct<T, null> {
    80→export function deprecated<T>(
    81→  struct: Struct<T>,
    82→  log: (value: unknown, ctx: Context) => void
    83→): Struct<T> {
   106→export function dynamic<T>(
   107→  fn: (value: unknown, ctx: Context) => Struct<T, any>
   108→): Struct<T, null> {
   140→export function lazy<T>(fn: () => Struct<T, any>): Struct<T, null> {
   171→export function omit<S extends ObjectSchema, K extends keyof S>(
   172→  struct: Struct<ObjectType<S>, S>,
   173→  keys: K[]
   174→): Struct<ObjectType<Omit<S, K>>, Omit<S, K>> {
   197→export function partial<S extends ObjectSchema>(
   198→  struct: Struct<ObjectType<S>, S> | S
   199→): Struct<ObjectType<PartialObjectSchema<S>>, PartialObjectSchema<S>> {
   221→export function pick<S extends ObjectSchema, K extends keyof S>(
   222→  struct: Struct<ObjectType<S>, S>,
   223→  keys: K[]
   224→): Struct<ObjectType<Pick<S, K>>, Pick<S, K>> {
   247→export function struct<T>(name: string, validator: Validator): Struct<T, null> {

docs/readme.md
     7→### Usage

test/index.ts
     2→ * A helper for testing type signatures.
     5→export function test<T>(fn: (x: unknown) => T) {}

docs/summary.md
     3→## Guides
    12→## API Reference
    22→## Resources

docs/guides/

docs/images/

docs/reference/

docs/resources/

test/api/

test/typings/

test/validation/
